# LMS_DRF

./: .dockerignore  .env.sample  Dockerfile  README.md  all_data.json  docker-compose.yaml  payments.json  pyproject.toml
config/: settings.py  urls.py
education/: models.py  paginators.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
education/migrations/: 0001_initial.py  0002_initial.py  0003_alter_payments_payment_date.py  0004_alter_course_owner_alter_payments_owner.py  0005_lesson_owner.py  0006_subscription.py  0007_alter_payments_amount_alter_payments_owner_and_more.py  0008_course_amount_lesson_amount.py  0009_alter_payments_amount.py  0010_alter_course_amount_alter_lesson_amount.py  0011_alter_course_amount_alter_lesson_amount.py  0012_alter_payments_amount.py
users/: helpers.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_role.py  0003_alter_user_role.py
